--- a/cabal.project
+++ b/cabal.project
@@ -1,1 +1,8 @@
 packages: ./
+
+source-repository-package
+  type: git
+  location: https://github.com/jchia/xdg-desktop-entry
+  tag: df3b41d9f3c5b461b94ccb325bcbf4b049560d92
+
+allow-newer: mtl
